# delegation

./: .gitignore  Cargo.toml  README.md  airdrop.ts  dev-wallet-sample.json  enroll.ts  keygen.ts  transfer.ts
.cargo/: config.toml
operator_history_core/: Cargo.toml
operator_history_core/src/: config.rs  lib.rs
operator_history_program/: Cargo.toml
operator_history_program/src/: initialize_config.rs  lib.rs
operator_history_sdk/: Cargo.toml
operator_history_sdk/src/: error.rs  instruction.rs  sdk.rs
programs/: wba_prereq.ts
