[package]
name = "operator-history-core"
version = "0.0.1"
edition = "2021"

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
operator-history-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
