[package]
name = "operator-history-program"
version = "0.0.1"
edition = "2021"

[dependencies]
borsh = { workspace = true }
const_str_to_pubkey = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
operator-history-core = { workspace = true }
operator-history-sdk = { workspace = true }
solana-program = { workspace = true }
